test_suite/test_cases/invalid/semanticErr/variables/basicTypeErr12.ast
-- Test: basicTypeErr12.wacc

-- Uploaded file: 
---------------------------------------------------------------
# type mismatch: string <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = 'h'
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:13 -- Incompatible type at 'h' (expected: CHAR[], actual: CHAR)

